# philotechnia

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: decisions.md  philotechnia_spec.md
docs/handoffs/: M0a.md  M0b.md  M1a.md  M1b.md  M2a.md  M2b.md  M3.md  M4.md  M5.md  M6.md  README.md
packaging/linux/: cpack_appimage.cmake.in  philotechnia.desktop
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/smoke/: CMakeLists.txt  smoke_test.cpp
triplets/: x64-linux.cmake
